--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.BloodDonation"
         tools:targetApi="31">
         <activity
+            android:name=".RecipientRegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DonorRegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SelectRegistrationActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
